Encerramento das Inscrições

--- a/index.html
+++ b/index.html
@@ -1,171 +1,172 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>ISFIB - Processo Seletivo</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="style.css" />
-  <title>ISFIB - Processo Seletivo</title>
-</head>
-
-<body>
-  <main class="container mobile">
-
-    <section class="secao2">
-      <div class="secao2_logotipo">
-        <div class="secao2_titulo_logotipo">
-          <h1>Processo de Seleção</h1>
-        </div>
-        <div class="secao2_logotipo_img">
-          <img src="img/logotipo.png" alt="" />
-        </div>
-      </div>
-      <!-- <div class="secao2_img"><img src="img/student.png" alt="" /></div> -->
-    </section>
-
-    <section class="secao1">
-
-      <div class="first_title">
-        <h2 class="secao1_titulo">Inscrições</h2>
-        <h2 class="secao1_titulo">Abertas</h2>
-        <p class="secao1_descricao">de 17 à 27 de novembro.</p>
-      </div>
-      <div class="secao1_img">
-        <img src="img/student2.png" alt="" />
-      </div>
-      <div class="secao1_conteiner_descricao">
-        <p class="secao1_descricao">Para qualquer<span> Estudante</span></p>
-      </div>
-
-    </section>
-
-    <section class="secao3">
-
-      <div class="secao1_btn">
-
-        <a href="/saiba-mais.html" class="secao1_btn_link secao1_btn_link_elementos">
-          <p>Saiba mais</p>
-          <img src="img/new document_black.png" alt="" />
-        </a>
-        <a href="https://forms.gle/7DTXApc9s7tF6EBUA" class="secao1_btn_link btn_border jsanimate botaoDeInscricao">Inscreva-se!</a>
-      </div>
-    </section>
-  </main>
-
-  <main data-desktop="container">
-    <div data-desktop="containerDesktop">
-
-      <section data-desktop="logo">
-        <div data-desktop="pilula">
-          <div data-desktop="pilula-title">
+  <body>
+    <main class="container mobile">
+      <section class="secao2">
+        <div class="secao2_logotipo">
+          <!-- <div class="secao2_titulo_logotipo">
             <h1>Processo de Seleção</h1>
-          </div>
-          <div data-desktop="pilula-logo">
+          </div> -->
+          <div class="secao2_logotipo_img">
             <img src="img/logotipo.png" alt="" />
           </div>
         </div>
         <!-- <div class="secao2_img"><img src="img/student.png" alt="" /></div> -->
       </section>
 
-      <section data-desktop="titleAndBtns">
-        <div>
-          <h2>Inscrições</h2>
-          <h2>Abertas</h2>
-          <p>de 17 à 27 de novembro.</p>
+      <section class="secao1">
+        <div class="first_title">
+          <h2 class="secao1_titulo">Inscrições</h2>
+          <h2 class="secao1_titulo">encerradas</h2>
+          <p class="secao1_descricao">Resultado das incrições</p>
+          <p class="secao1_descricao">16 de dezembro.</p>
         </div>
+        <!-- <div class="secao1_img">
+          <img src="img/student2.png" alt="" />
+        </div> -->
+        <div class="secao1_conteiner_descricao">
+          <p class="secao1_descricao espaco">
+            Se você perdeu o prazo não desanime novas vagas podem abrir
+            futuramente.
+          </p>
+          <p class="titulo__redes__sociais">Siga nossas redes!</p>
+        </div>
+      </section>
 
-        <div data-desktop = "botoes">
-          <a href="/saiba-mais.html">
-            <p>Saiba mais!</p>
+      <!-- <section class="secao3">
+        <div class="secao1_btn">
+          <a
+            href="/saiba-mais.html"
+            class="secao1_btn_link secao1_btn_link_elementos">
+            <p>Saiba mais</p>
             <img src="img/new document_black.png" alt="" />
           </a>
-          <a href="https://forms.gle/7DTXApc9s7tF6EBUA" class="botaoDeInscricao">Inscreva-se!</a>
+          <a
+            href="https://forms.gle/7DTXApc9s7tF6EBUA"
+            class="secao1_btn_link btn_border jsanimate botaoDeInscricao"
+            >Inscreva-se!</a
+          >
         </div>
+      </section> -->
+    </main>
 
-      </section>
+    <main data-desktop="container">
+      <div data-desktop="containerDesktop">
+        <section data-desktop="logo">
+          <div data-desktop="pilula">
+            <div data-desktop="pilula-title">
+              <h1>Processo de Seleção</h1>
+            </div>
+            <div data-desktop="pilula-logo">
+              <img src="img/logotipo.png" alt="" />
+            </div>
+          </div>
+          <!-- <div class="secao2_img"><img src="img/student.png" alt="" /></div> -->
+        </section>
 
-      <section data-desktop="brasilMap">
-        <div>
-          <p><span>Estudantes</span>
+        <section data-desktop="titleAndBtns">
+          <div>
+            <h2>Inscrições</h2>
+            <h2>Abertas</h2>
+            <p>de 17 à 27 de novembro.</p>
+          </div>
 
-de todas as áreas
-e níveis
-          </p>
-        </div>
-        <div>
-          <img src="img/student2.png" alt="" />
-        </div>
-      </section>
+          <div data-desktop="botoes">
+            <a href="/saiba-mais.html">
+              <p>Saiba mais!</p>
+              <img src="img/new document_black.png" alt="" />
+            </a>
+            <a
+              href="https://forms.gle/7DTXApc9s7tF6EBUA"
+              class="botaoDeInscricao"
+              >Inscreva-se!</a
+            >
+          </div>
+        </section>
 
-    </div>
-  </main>
+        <section data-desktop="brasilMap">
+          <div>
+            <p>
+              <span>Estudantes</span>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', (e) => {
-      function anima() {
-        const buttonAsign = document.querySelector('.jsanimate')
+              de todas as áreas e níveis
+            </p>
+          </div>
+          <div>
+            <img src="img/student2.png" alt="" />
+          </div>
+        </section>
+      </div>
+    </main>
 
-        const intervalo = setInterval(() => {
-          buttonAsign.dataset.animate = 'buttonPulse'
-          setTimeout(() => {
-            buttonAsign.dataset.animate = ''
-          }, 1000)
-        }, 4000)
+    <script>
+      document.addEventListener("DOMContentLoaded", e => {
+        function anima() {
+          const buttonAsign = document.querySelector(".jsanimate");
+
+          const intervalo = setInterval(() => {
+            buttonAsign.dataset.animate = "buttonPulse";
+            setTimeout(() => {
+              buttonAsign.dataset.animate = "";
+            }, 1000);
+          }, 4000);
+        }
+
+        if (/Mobi/i.test(navigator.userAgent)) anima();
+
+        const desktop = document.querySelector('[data-desktop="container"]');
+        const mobile = document.querySelector(".mobile");
+        setInterval(() => {
+          if (/Mobi/i.test(navigator.userAgent)) {
+            console.log("tela de celular");
+            const heightScreen = window.innerHeight + "px";
+            document.body.style.height = heightScreen;
+            mobile.dataset.container = "show";
+            desktop.dataset.container = "none";
+
+            document.querySelector(
+              '[data-desktop="containerDesktop"]'
+            ).style.display = "none";
+          } else {
+            console.log("tela de computador");
+            mobile.dataset.container = "none";
+            desktop.dataset.container = "show";
+            document.querySelector(
+              '[data-desktop="containerDesktop"]'
+            ).style.display = "grid";
+          }
+        }, 500);
+        zz;
+      });
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-GD7CYQ1TWV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
       }
+      gtag("js", new Date());
 
-      if (/Mobi/i.test(navigator.userAgent))
-        anima()
-
-      const desktop = document.querySelector('[data-desktop="container"]')
-      const mobile = document.querySelector('.mobile')
-      setInterval(() => {
-        if (/Mobi/i.test(navigator.userAgent)) {
-          console.log('tela de celular')
-          const heightScreen = window.innerHeight + 'px'
-          document.body.style.height = heightScreen
-          mobile.dataset.container = 'show'
-          desktop.dataset.container = 'none'
-
-          document
-            .querySelector('[data-desktop="containerDesktop"]')
-            .style.display = 'none'
-        }
-        else {
-          console.log('tela de computador')
-          mobile.dataset.container = 'none'
-          desktop.dataset.container = 'show'
-          document
-            .querySelector('[data-desktop="containerDesktop"]')
-            .style.display = 'grid'
-
-        }
-
-      }, 500)
-
-    })
-  </script>
-<<<<<<< HEAD
-	<!-- Google tag (gtag.js) -->
-=======
-  <!-- Google tag (gtag.js) -->
->>>>>>> 45aac5caa0919090bccd88e798a79758eafcccd2
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7CYQ1TWV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-GD7CYQ1TWV');
-  </script>
-<<<<<<< HEAD
-	<script>
-		document.querySelector(".botaoDeInscricao").addEventListener('click', function () {
-			gtag('event', 'botaoDeInscricao')
-		})
-	</script>
-=======
->>>>>>> 45aac5caa0919090bccd88e798a79758eafcccd2
-</body>
-
+      gtag("config", "G-GD7CYQ1TWV");
+    </script>
+    <script>
+      document
+        .querySelector(".botaoDeInscricao")
+        .addEventListener("click", function () {
+          gtag("event", "botaoDeInscricao");
+        });
+    </script>
+  </body>
 </html>
