refact: 123456 atualização das datas do processo de inscrição

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           <div>
             <h2>Inscrições</h2>
             <h2>Abertas</h2>
-            <p>de 17 à 27 de novembro.</p>
+            <p>de 1 à 15 de junho.</p>
+            <p>Entrevistas: 1 à 13 de julho</p>
+            <p><strong>RESULTADOS:</strong> 20 de julho</p>
           </div>
 
           <div data-desktop="botoes">
