--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="first_title">
         <h2 class="secao1_titulo">Inscrições</h2>
         <h2 class="secao1_titulo">Abertas</h2>
-        <p class="secao1_descricao">de 17 à 27 de novembro.</p>
+        <p class="secao1_descricao">1 à 15 de junho.</p>
       </div>
       <div class="secao1_img">
         <img src="img/student2.png" alt="" />
@@ -48,7 +48,7 @@
           <p>Saiba mais</p>
           <img src="img/new document_black.png" alt="" />
         </a>
-        <a href="https://forms.gle/7DTXApc9s7tF6EBUA" class="secao1_btn_link btn_border jsanimate">Inscreva-se!</a>
+        <a href="https://forms.gle/JES4JGwgAek1Jge58" class="secao1_btn_link btn_border jsanimate">Inscreva-se!</a>
       </div>
     </section>
   </main>
@@ -72,7 +72,7 @@
         <div>
           <h2>Inscrições</h2>
           <h2>Abertas</h2>
-          <p>de 17 à 27 de novembro.</p>
+          <p>1 à 15 de Junho.</p>
         </div>
 
         <div data-desktop = "botoes">
@@ -80,7 +80,7 @@
             <p>Saiba mais!</p>
             <img src="img/new document_black.png" alt="" />
           </a>
-          <a href="https://forms.gle/7DTXApc9s7tF6EBUA">Inscreva-se!</a>
+          <a href="https://forms.gle/JES4JGwgAek1Jge58">Inscreva-se!</a>
         </div>
 
       </section>
